# helioverse

./: .dev.vars.example  .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  helioverse_spec.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.github/workflows/: continual-learning.yml  verify.yml
.pi/agents/: verifier.md
apps/web/: .dev.vars.example  eslint.config.js  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  wrangler.toml
apps/web/public/: _worker.js  robots.txt  sitemap.xml
apps/web/src/: App.tsx  main.tsx
contracts/: README.md  r2-layout.md
contracts/fixtures/events/: event-cme-halo.json  event-cme-resolved.json  event-flr.json
contracts/fixtures/snapshot/: snapshot-degraded.json  snapshot-quiet.json  snapshot-storm.json
contracts/fixtures/vectors/: astronomy.json  coupling.json  dbm.json  delay-correction.json  golook.json
contracts/schemas/: alert-subscription.schema.json  event.schema.json  snapshot.schema.json
contracts/tests/: formulas.py  gen_vectors.py  validate.py
contracts/wasm-api/: helio_core_api.rs
crates/helio-core/: Cargo.toml
crates/helio-core/src/: astronomy.rs  constants.rs  coupling.rs  dbm.rs  delay.rs  error.rs  golook.rs  lib.rs  wasm.rs
crates/helio-core/tests/: golden_vectors.rs
docs/: heliospheric-flow-mode.md  local-setup.md  package-boundaries.md
learning/: README.md
learning/ledger/v1/: events.jsonl  outcomes.jsonl
learning/registry/: registry.json
learning/runs/: 2026-07-11T06-29-34-761Z-7ccea1986ca59267.json  2026-07-13T08-25-40-522Z-a1a31db586129213.json  2026-07-20T08-19-19-165Z-4fd3bb9a5e254291.json
learning/schema/v1/: event.schema.json  model.schema.json  outcome.schema.json
scripts/learning/: collect.mjs  ledger.test.mjs  lib.mjs  train.mjs  verify.mjs
specs/: o-take-ownership-of-this-project-and-delig-20260612.md
tests/: README.md
workers/alerts/: .dev.vars.example  Cargo.toml  wrangler.toml
workers/alerts/src/: lib.rs  model.rs  push.rs  sweep.rs
workers/backfill/: Cargo.toml  wrangler.toml
workers/backfill/src/: lib.rs  types.rs
workers/imagery/: Cargo.toml  wrangler.toml
workers/imagery/src/: lib.rs
workers/ingest/: Cargo.toml  wrangler.toml
workers/ingest/src/: lib.rs  (+2 more)
(+90 files in other folders)
