[package]
name = "helio-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Helioverse shared physics/scoring crate (WASM target)"

[lints]
workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
