[workspace]
resolver = "2"

[package]
name = "helio-alerts"
version = "0.1.0"
edition = "2021"
description = "Helioverse alerts worker — Web Push subscriptions + cron alert sweep"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.4", features = ["d1"] }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["wasmbind"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
