[workspace]
resolver = "2"

[package]
name = "helio-backfill"
version = "0.1.0"
edition = "2021"
description = "Helioverse backfill worker — 30-day history/event backfill tooling"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.4"
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["wasmbind", "serde"] }
